--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,9 @@
 services:
   - type: web
     name: people-team-dashboard-metabase
-    env: docker
-    image: docker.io/metabase/metabase:latest
+    runtime: image
+    image:
+      url: docker.io/metabase/metabase:latest
     plan: free
     envVars:
       - key: MB_DB_TYPE
@@ -14,10 +15,10 @@ services:
       - key: MB_DB_USER
         value: postgres
       - key: MB_DB_PASS
-        sync: false   # You will set this in Render's dashboard for security
+        sync: false   # Set in Render dashboard for security
       - key: MB_DB_HOST
         value: db.ikojzddhsvvquwnkoxda.supabase.co
       - key: MB_ENCRYPTION_SECRET
-        generateValue: true  # Random secret generated on deploy
+        generateValue: true
       - key: JAVA_TOOL_OPTIONS
         value: -Xmx512m
