--- a/render.yaml
+++ b/render.yaml
@@ -1,24 +1,37 @@
 services:
   - type: web
-    name: people-team-dashboard-metabase
-    runtime: image
+    name: metabase
+    env: docker
+    plan: free
+    autoDeploy: true
+    dockerfilePath: ""
     image:
       url: docker.io/metabase/metabase:latest
-    plan: free
     envVars:
       - key: MB_DB_TYPE
         value: postgres
       - key: MB_DB_DBNAME
-        value: postgres
+        value: metabase
       - key: MB_DB_PORT
-        value: 5432
+        value: "5432"
       - key: MB_DB_USER
-        value: postgres
+        fromService:
+          name: metabase-db
+          type: postgresql
+          property: user
       - key: MB_DB_PASS
-        sync: false   # Set in Render dashboard for security
+        fromService:
+          name: metabase-db
+          type: postgresql
+          property: password
       - key: MB_DB_HOST
-        value: db.ikojzddhsvvquwnkoxda.supabase.co
-      - key: MB_ENCRYPTION_SECRET
-        generateValue: true
-      - key: JAVA_TOOL_OPTIONS
-        value: -Xmx512m
+        fromService:
+          name: metabase-db
+          type: postgresql
+          property: host
+
+databases:
+  - name: metabase-db
+    databaseName: metabase
+    plan: free
+    ipAllowList: []
